# skydio_proxy

./: .gitignore  CMakeLists.txt  README.md  package.xml
calibration/: user_camera.ini
launch/: camera_stream.launch  proxy.launch
msg/: SkillStatus.msg  VoxelHeader.msg  VoxelOccupancyRunLengthEncoded.msg  WindSpeed.msg
nodes/: h264_stream.sdp  service_gui.py  udp_proxy.py  user_camera_stream.py
skillset/: __init__.py  inspection.py  manifest.json  waypoints.py
skydio/cloud/: __main__.py  update_util.py
skydio/comms/: http_client.py  udp_link.py
skydio/input_devices/: gamepad.py
skydio/lcmtypes/: __init__.py
skydio/lcmtypes/body/: __init__.py  _pose_state_t.py  _wrench_stamped_t.py  _wrench_t.py
skydio/lcmtypes/common/: __init__.py  _imu_meas_t.py
skydio/lcmtypes/dynamics_model/: __init__.py  _air_density_t.py  _wind_stamped_t.py  _wind_t.py  _wind_wrenches_t.py  _wrenches_t.py
skydio/lcmtypes/eigen_lcm/: _Matrix2d.py  _Matrix2f.py  _Matrix2i.py  _Matrix3d.py  _Matrix3f.py  _Matrix3i.py  _Matrix4d.py  _Matrix4f.py  _Matrix4i.py  _MatrixXd.py  _MatrixXf.py  _MatrixXi.py  _Quaterniond.py  _Quaternionf.py  _Vector2d.py  _Vector2f.py  _Vector2i.py  _Vector3d.py  _Vector3f.py  _Vector3i.py  _Vector4d.py  _Vector4f.py  _Vector4i.py  _Vector8f.py  _VectorXd.py  _VectorXf.py  _VectorXi.py  __init__.py
skydio/lcmtypes/voxels/: __init__.py  _voxel_header_t.py  _voxel_occupancy_run_length_encoded_t.py
skydio/types/: custom_comms.proto  custom_comms_pb2.py  multipart_msg_t.py  skybus.proto  skybus_pb2.py  vehicle.proto  vehicle_pb2.py
src/: voxel_republisher_node.cpp
srv/: SkydioCommand.srv
util/: channel_util.py
